--- a/.gitmodules
+++ b/.gitmodules
@@ -102,6 +102,8 @@
 [submodule "externals/LibAtrac9"]
 	path = externals/LibAtrac9
 	url = https://github.com/shadps4-emu/ext-LibAtrac9.git
+	shallow = true
 [submodule "externals/libpng"]
 	path = externals/libpng
 	url = https://github.com/pnggroup/libpng
+	shallow = true
