--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -174,11 +174,6 @@ jobs:
       with:
         xcode-version: latest
 
-    - name: Install MoltenVK
-      run: |
-        arch -x86_64 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-        arch -x86_64 /usr/local/bin/brew install molten-vk
-
     - name: Cache CMake Configuration
       uses: actions/cache@v4 
       env: 
@@ -210,7 +205,7 @@ jobs:
       run: |
         mkdir upload
         mv ${{github.workspace}}/build/shadps4 upload
-        cp $(arch -x86_64 /usr/local/bin/brew --prefix)/opt/molten-vk/lib/libMoltenVK.dylib upload
+        cp ${{github.workspace}}/build/externals/MoltenVK/libMoltenVK.dylib upload
         tar cf shadps4-macos-sdl.tar.gz -C upload .
     - uses: actions/upload-artifact@v4
       with:
@@ -230,11 +225,8 @@ jobs:
       with:
         xcode-version: latest
 
-    - name: Install MoltenVK and Setup Qt
-      run: |
-        arch -x86_64 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-        arch -x86_64 /usr/local/bin/brew install molten-vk
-    - uses: jurplel/install-qt-action@v4
+    - name: Setup Qt
+      uses: jurplel/install-qt-action@v4
       with:
         version: 6.7.3
         host: mac
