Let userfd be be opt-in instead of disabled

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -887,10 +887,10 @@ if (ENABLE_DISCORD_RPC)
     target_compile_definitions(shadps4 PRIVATE ENABLE_DISCORD_RPC)
 endif()
 
-# https://github.com/shadps4-emu/shadPS4/issues/1704
-#if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
-#    target_compile_definitions(shadps4 PRIVATE ENABLE_USERFAULTFD)
-#endif()
+# Optional due to https://github.com/shadps4-emu/shadPS4/issues/1704
+if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux" AND ENABLE_USERFAULTFD)
+    target_compile_definitions(shadps4 PRIVATE ENABLE_USERFAULTFD)
+endif()
 
 if (APPLE)
   option(USE_SYSTEM_VULKAN_LOADER "Enables using the system Vulkan loader instead of directly linking with MoltenVK. Useful for loading validation layers." OFF)
