--- a/src/video_core/host_shaders/CMakeLists.txt
+++ b/src/video_core/host_shaders/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SHADER_FILES
     detile_m32x2.comp
     detile_m32x4.comp
     detile_macro32x1.comp
+    detile_macro32x2.comp
     fs_tri.vert
     post_process.frag
 )
