--- a/.github/ISSUE_TEMPLATE/game-bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/game-bug-report.yaml
@@ -30,6 +30,8 @@ body:
           required: true
         - label: I have disabled all patches and cheats.
           required: true
+        - label: I have all the required [system modules](https://github.com/shadps4-emu/shadps4-game-compatibility?tab=readme-ov-file#informations) installed.
+          required: true
   - type: textarea
     id: desc
     attributes:
