--- a/.github/ISSUE_TEMPLATE/app-bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/app-bug-report.yaml
@@ -9,7 +9,7 @@ body:
         ## Important: Read First
 
         Please do not make support requests on GitHub. Our issue tracker is for tracking bugs and feature requests only
-        If you need help using the emulator please make a request on our forums or contact us on discord.
+        If you need help using the emulator please contact us on discord.
 
         If you are unsure, start with [discord](https://discord.gg/bFJxfftGW6).
 
