--- a/.github/ISSUE_TEMPLATE/game-bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/game-bug-report.yaml
@@ -24,13 +24,15 @@ body:
       options:
         - label: I have searched for a similar issue in this repository and did not find one.
           required: true
-        - label: I am using an official build obtained from [releases](https://github.com/shadps4-emu/shadPS4/releases) or updated it using its in-app updater.
+        - label: |
+            I am using an official build obtained from [releases](https://github.com/shadps4-emu/shadPS4/releases) or updated it using its in-app updater.
           required: true
         - label: I have re-dumped the game and performed a clean install without mods.
           required: true
         - label: I have disabled all patches and cheats.
           required: true
-        - label: I have all the required [system modules](https://github.com/shadps4-emu/shadps4-game-compatibility?tab=readme-ov-file#informations) installed.
+        - label: |
+            I have all the required [system modules](https://github.com/shadps4-emu/shadps4-game-compatibility?tab=readme-ov-file#informations) installed.
           required: true
   - type: textarea
     id: desc
