Unified the discord clause

--- a/.github/ISSUE_TEMPLATE/app-bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/app-bug-report.yaml
@@ -9,9 +9,7 @@ body:
         ## Important: Read First
 
         Please do not make support requests on GitHub. Our issue tracker is for tracking bugs and feature requests only
-        If you need help using the emulator please contact us on discord.
-
-        If you are unsure, start with [discord](https://discord.gg/bFJxfftGW6).
+        If you need help using the emulator or unsure about your issue please contact us on [discord](https://discord.gg/bFJxfftGW6).
 
         Please make an effort to make sure your issue isn't already reported.
 
