address review comments

--- a/.github/ISSUE_TEMPLATE/game-bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/game-bug-report.yaml
@@ -13,9 +13,9 @@ body:
         **Please do not make support requests on GitHub. Our issue tracker is for tracking bugs and feature requests only.
         If you have a support request or are unsure about the nature of your issue please contact us on [discord](https://discord.gg/bFJxfftGW6).**
 
-        This repository does not provide support for modded games. You should perform a clean game installation before submitting an issue.
+        This repository does not provide support for modded games. You should perform and test a clean game installation before submitting an issue.
 
-        This repository does not provide support for patches. If you have issues with patches please refer to [Cheats and Patches Repository](https://github.com/shadps4-emu/ps4_cheats).
+        This repository does not provide support for game patches. If you are having issues with patches please refer to [Cheats and Patches Repository](https://github.com/shadps4-emu/ps4_cheats).
 
         Before submitting an issue please check [Game Compatibility Repository](https://github.com/shadps4-emu/shadps4-game-compatibility) for the information about the status of the game.
 
@@ -25,7 +25,7 @@ body:
   - type: checkboxes
     id: checklist
     attributes:
-      label: Checklist
+      label: Checklist (we expect you to perform these steps before opening the issue)
       options:
         - label: I have searched for a similar issue in this repository and did not find one.
           required: true
