--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -273,7 +273,7 @@ jobs:
         name: shadps4-macos-qt-${{ needs.get-info.outputs.date }}-${{ needs.get-info.outputs.shorthash }}
         path: shadps4-macos-qt.tar.gz
 
-  linux-sdl:
+  linux-sdl-clang:
     runs-on: ubuntu-24.04
     needs: get-info
     steps:
@@ -326,10 +326,10 @@ jobs:
         tar cf shadps4-linux-sdl.tar.gz -C ${{github.workspace}}/build shadps4
     - uses: actions/upload-artifact@v4
       with:
-        name: shadps4-linux-sdl-${{ needs.get-info.outputs.date }}-${{ needs.get-info.outputs.shorthash }}
+        name: shadps4-linux-sdl-clang-${{ needs.get-info.outputs.date }}-${{ needs.get-info.outputs.shorthash }}
         path: Shadps4-sdl.AppImage
 
-  linux-qt:
+  linux-qt-clang:
     runs-on: ubuntu-24.04
     needs: get-info
     steps:
@@ -373,7 +373,7 @@ jobs:
         tar cf shadps4-linux-qt.tar.gz -C ${{github.workspace}}/build shadps4
     - uses: actions/upload-artifact@v4
       with:
-        name: shadps4-linux-qt-${{ needs.get-info.outputs.date }}-${{ needs.get-info.outputs.shorthash }}
+        name: shadps4-linux-qt-clang-${{ needs.get-info.outputs.date }}-${{ needs.get-info.outputs.shorthash }}
         path: Shadps4-qt.AppImage
 
   linux-sdl-gcc:
@@ -472,7 +472,7 @@ jobs:
 
   pre-release:
     if: github.ref == 'refs/heads/main' && github.repository == 'shadps4-emu/shadPS4' && github.event_name == 'push'
-    needs: [get-info, windows-sdl, windows-qt, macos-sdl, macos-qt, linux-sdl, linux-qt, linux-sdl-gcc, linux-qt-gcc]
+    needs: [get-info, windows-sdl, windows-qt, macos-sdl, macos-qt, linux-sdl-clang, linux-qt-clang, linux-sdl-gcc, linux-qt-gcc]
     runs-on: ubuntu-latest
     steps:
     - name: Download all artifacts
