--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -273,7 +273,7 @@ jobs:
         name: shadps4-macos-qt-${{ needs.get-info.outputs.date }}-${{ needs.get-info.outputs.shorthash }}
         path: shadps4-macos-qt.tar.gz
 
-  linux-sdl-clang:
+  linux-sdl:
     runs-on: ubuntu-24.04
     needs: get-info
     steps:
@@ -329,7 +329,7 @@ jobs:
         name: shadps4-linux-sdl-${{ needs.get-info.outputs.date }}-${{ needs.get-info.outputs.shorthash }}
         path: Shadps4-sdl.AppImage
 
-  linux-qt-clang:
+  linux-qt:
     runs-on: ubuntu-24.04
     needs: get-info
     steps:
