--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -262,6 +262,7 @@ set(NETWORK_LIBS src/core/libraries/network/http.cpp
                  src/core/libraries/network/net_ctl_obj.h
                  src/core/libraries/network/net_ctl_codes.h
                  src/core/libraries/network/net.h
+                 src/core/libraries/network/net_error.h
                  src/core/libraries/network/ssl.cpp
                  src/core/libraries/network/ssl.h
 )
