--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -313,6 +313,8 @@ set(NETWORK_LIBS src/core/libraries/network/http.cpp
                  src/core/libraries/network/posix_sockets.cpp
                  src/core/libraries/network/sockets.h
                  src/core/libraries/network/net_error.h
+                 src/core/libraries/network/epoll.cpp
+                 src/core/libraries/network/epoll.h
 )
 
 set(AVPLAYER_LIB src/core/libraries/avplayer/avplayer_common.cpp
