fake p2p sockets makes peggle2 works again

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -311,6 +311,7 @@ set(NETWORK_LIBS src/core/libraries/network/http.cpp
                  src/core/libraries/network/ssl2.cpp
                  src/core/libraries/network/ssl2.h
                  src/core/libraries/network/posix_sockets.cpp
+                 src/core/libraries/network/p2p_sockets.cpp
                  src/core/libraries/network/sockets.h
                  src/core/libraries/network/net_error.h
                  src/core/libraries/network/epoll.cpp
