Include trophy rarity icons in pop up, remove newlines from viewer
Fix layout

Update platinum.png

Fix linux and apple

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -94,11 +94,14 @@ jobs:
     - name: Build
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --parallel $env:NUMBER_OF_PROCESSORS
 
+    - name: Move Files and Resources
+      run: "mkdir upload\n\t move build/Resources upload\nmove build/shadPS4.exe upload\n"
+
     - name: Upload Windows SDL artifact
       uses: actions/upload-artifact@v4
       with:
         name: shadps4-win64-sdl-${{ needs.get-info.outputs.date }}-${{ needs.get-info.outputs.shorthash }}
-        path: ${{github.workspace}}/build/shadPS4.exe
+        path: upload/
 
   windows-qt:
     runs-on: windows-2025
@@ -148,10 +151,11 @@ jobs:
     - name: Build
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --parallel $env:NUMBER_OF_PROCESSORS
 
+    - name: Move Files and Resources
+      run: "mkdir upload\n\t move build/Resources upload\nmove build/shadPS4.exe upload\n"
+
     - name: Deploy and Package
       run: |
-        mkdir upload
-        move build/shadPS4.exe upload
         windeployqt --no-compiler-runtime --no-system-d3d-compiler --no-system-dxc-compiler --dir upload upload/shadPS4.exe
         Compress-Archive -Path upload/* -DestinationPath shadps4-win64-qt-${{ needs.get-info.outputs.date }}-${{ needs.get-info.outputs.shorthash }}.zip
 
@@ -201,10 +205,11 @@ jobs:
     - name: Build
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --parallel $(sysctl -n hw.ncpu)
 
+    - name: Move Files and Resources
+      run: "mkdir upload\n\t mv ${{github.workspace}}/build/shadps4 upload\nmv ${{github.workspace}}/build/Resources upload\n"
+
     - name: Package and Upload macOS SDL artifact
       run: |
-        mkdir upload
-        mv ${{github.workspace}}/build/shadps4 upload
         cp ${{github.workspace}}/build/externals/MoltenVK/libMoltenVK.dylib upload
         tar cf shadps4-macos-sdl.tar.gz -C upload .
     - uses: actions/upload-artifact@v4
@@ -261,11 +266,12 @@ jobs:
 
     - name: Build
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --parallel $(sysctl -n hw.ncpu)
+    
+    - name: Move Files and Resources
+      run: "mkdir upload\n\t mv ${{github.workspace}}/build/shadps4.app upload\n"
 
     - name: Package and Upload macOS Qt artifact
       run: |
-        mkdir upload
-        mv ${{github.workspace}}/build/shadps4.app upload
         macdeployqt upload/shadps4.app
         tar cf shadps4-macos-qt.tar.gz -C upload .
     - uses: actions/upload-artifact@v4
