--- a/REUSE.toml
+++ b/REUSE.toml
@@ -19,6 +19,10 @@ path = [
     "documents/Screenshots/*",
     "documents/Screenshots/Linux/*",
     "externals/MoltenVK/MoltenVK_icd.json",
+    "Resources/bronze.png",
+    "Resources/gold.png",
+    "Resources/platinum.png",
+    "Resources/silver.png",
     "scripts/ps4_names.txt",
     "src/images/about_icon.png",
     "src/images/controller_icon.png",
